static/docs/user/1.0/_sources/cli/apptainer_key_export.rst.txt
.. _apptainer_key_export:

apptainer key export
--------------------

Export a public or private key into a specific file

Synopsis
~~~~~~~~



  The 'key export' command allows you to export a key and save it to a file.

::

  apptainer key export [export options...] <output-file>

Examples
~~~~~~~~

::


    Exporting a private key:
    
    $ apptainer key export --secret ./private.asc

    Exporting a public key:
    
    $ apptainer key export ./public.asc

Options
~~~~~~~

::

  -a, --armor    ascii armored format
  -g, --global   manage global public keys (import/pull/remove are restricted to root user or unprivileged installation only)
  -h, --help     help for export
  -s, --secret   export a secret key

SEE ALSO
~~~~~~~~

* :ref:`apptainer key <apptainer_key>` 	 - Manage OpenPGP keys

*Auto generated by spf13/cobra on 13-Dec-2022*
